workspace/jupyter_startup.log
[E 2025-06-29 23:21:08.285 ServerApp] Exception while loading config file /workspace/.jupyter/config/jupyter_server_config.py
    Traceback (most recent call last):
      File "/usr/local/lib/python3.11/site-packages/traitlets/config/application.py", line 915, in _load_config_files
        config = loader.load_config()
                 ^^^^^^^^^^^^^^^^^^^^
      File "/usr/local/lib/python3.11/site-packages/traitlets/config/loader.py", line 622, in load_config
        self._read_file_as_dict()
      File "/usr/local/lib/python3.11/site-packages/traitlets/config/loader.py", line 655, in _read_file_as_dict
        exec(compile(f.read(), conf_filename, "exec"), namespace, namespace)  # noqa: S102
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
      File "/workspace/.jupyter/config/jupyter_server_config.py", line 23
        c.IdentityProvider.token = ''
    IndentationError: unexpected indent
[I 2025-06-29 23:21:08.294 ServerApp] jupyter_lsp | extension was successfully linked.
[I 2025-06-29 23:21:08.296 ServerApp] jupyter_server_terminals | extension was successfully linked.
[E 2025-06-29 23:21:08.297 LabApp] Exception while loading config file /workspace/.jupyter/config/jupyter_lab_config.py
    Traceback (most recent call last):
      File "/usr/local/lib/python3.11/site-packages/traitlets/config/application.py", line 915, in _load_config_files
        config = loader.load_config()
                 ^^^^^^^^^^^^^^^^^^^^
      File "/usr/local/lib/python3.11/site-packages/traitlets/config/loader.py", line 622, in load_config
        self._read_file_as_dict()
      File "/usr/local/lib/python3.11/site-packages/traitlets/config/loader.py", line 655, in _read_file_as_dict
        exec(compile(f.read(), conf_filename, "exec"), namespace, namespace)  # noqa: S102
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
      File "/workspace/.jupyter/config/jupyter_lab_config.py", line 22
        c.IdentityProvider.token = ''
    IndentationError: unexpected indent
[I 2025-06-29 23:21:08.300 ServerApp] jupyterlab | extension was successfully linked.
[I 2025-06-29 23:21:08.300 ServerApp] Writing Jupyter server cookie secret to /workspace/.jupyter/runtime/jupyter_cookie_secret
[I 2025-06-29 23:21:08.450 ServerApp] notebook_shim | extension was successfully linked.
[W 2025-06-29 23:21:08.455 ServerApp] All authentication is disabled.  Anyone who can connect to this server will be able to run code.
[I 2025-06-29 23:21:08.455 ServerApp] notebook_shim | extension was successfully loaded.
[I 2025-06-29 23:21:08.456 ServerApp] jupyter_lsp | extension was successfully loaded.
[I 2025-06-29 23:21:08.457 ServerApp] jupyter_server_terminals | extension was successfully loaded.
[I 2025-06-29 23:21:08.458 LabApp] JupyterLab extension loaded from /usr/local/lib/python3.11/site-packages/jupyterlab
[I 2025-06-29 23:21:08.458 LabApp] JupyterLab application directory is /usr/local/share/jupyter/lab
[I 2025-06-29 23:21:08.458 LabApp] Extension Manager is 'pypi'.
[I 2025-06-29 23:21:08.479 ServerApp] jupyterlab | extension was successfully loaded.
[I 2025-06-29 23:21:08.480 ServerApp] Serving notebooks from local directory: /workspace
[I 2025-06-29 23:21:08.480 ServerApp] Jupyter Server 2.16.0 is running at:
[I 2025-06-29 23:21:08.480 ServerApp] http://6fb3ad3844e7:8888/lab
[I 2025-06-29 23:21:08.480 ServerApp]     http://127.0.0.1:8888/lab
[I 2025-06-29 23:21:08.480 ServerApp] Use Control-C to stop this server and shut down all kernels (twice to skip confirmation).
[I 2025-06-29 23:21:08.488 ServerApp] Skipped non-installed server(s): bash-language-server, dockerfile-language-server-nodejs, javascript-typescript-langserver, jedi-language-server, julia-language-server, pyright, python-language-server, python-lsp-server, r-languageserver, sql-language-server, texlab, typescript-language-server, unified-language-server, vscode-css-languageserver-bin, vscode-html-languageserver-bin, vscode-json-languageserver-bin, yaml-language-server
[W 2025-06-29 23:21:11.733 ServerApp] Clearing invalid/expired login cookie username-localhost-8888
[W 2025-06-29 23:21:11.751 TerminalsExtensionApp] 404 GET /terminals/websocket/1 (1f1358e4c6ae41be8bacf92fadb7f43b@192.168.65.1) 22.58ms referer=None
[W 2025-06-29 23:22:21.384 ServerApp] Clearing invalid/expired login cookie username-localhost-8888
[W 2025-06-29 23:22:21.424 ServerApp] Clearing invalid/expired login cookie username-localhost-8888
[W 2025-06-29 23:22:21.446 ServerApp] Clearing invalid/expired login cookie username-localhost-8888
[W 2025-06-29 23:22:21.454 ServerApp] Clearing invalid/expired login cookie username-localhost-8888
[W 2025-06-29 23:22:21.479 ServerApp] Clearing invalid/expired login cookie username-localhost-8888
[W 2025-06-29 23:22:21.500 ServerApp] Clearing invalid/expired login cookie username-localhost-8888
[W 2025-06-29 23:22:23.581 LabApp] Could not determine jupyterlab build status without nodejs
[I 2025-06-29 23:22:56.083 ServerApp] interrupted
[I 2025-06-29 23:22:56.085 ServerApp] Serving notebooks from local directory: /workspace
    0 active kernels
    Jupyter Server 2.16.0 is running at:
    http://6fb3ad3844e7:8888/lab
        http://127.0.0.1:8888/lab
Shut down this Jupyter server (y/[n])? 